first nextjs commit

--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "task-manager",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/iscobar456/task-manager.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iscobar456/task-manager/issues"
-  },
-  "homepage": "https://github.com/iscobar456/task-manager#readme"
+  "dependencies": {
+    "next": "9.3.5",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
+  }
 }
